force-app/main/default/objects/lep360learning__Path_Session_Stats__c/lep360learning__Path_Session_Stats__c.object-meta.xml
<CustomObject>
    <label>360Learning Path Session Stat</label>
    <nameField>
        <displayFormat>PSS-{00000000}</displayFormat>
        <label>360Learning Path Session Stat</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>360Learning Path Session Stats</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>