force-app/main/default/objects/lep360learning__Path_Session_Stats__c/fields/lep360learning__Path_session_completed_at__c.field-meta.xml
<CustomField>
    <fullName>lep360learning__Path_session_completed_at__c</fullName>
    <label>360Learning Path session completed at</label>
    <type>Date</type>
</CustomField>