force-app/main/default/objects/lep360learning__Path_Session_Stats__c/fields/lep360learning__Path_session_end_date__c.field-meta.xml
<CustomField>
    <fullName>lep360learning__Path_session_end_date__c</fullName>
    <label>360Learning Path session end date</label>
    <type>Date</type>
</CustomField>