force-app/main/default/objects/lep360learning__Path_Session_Stats__c/fields/lep360learning__Path_session_id__c.field-meta.xml
<CustomField>
    <fullName>lep360learning__Path_session_id__c</fullName>
    <label>360Learning Path session id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>