force-app/main/default/objects/lep360learning__Path_Session_Stats__c/fields/lep360learning__Path_session_score__c.field-meta.xml
<CustomField>
    <fullName>lep360learning__Path_session_score__c</fullName>
    <label>360Learning Path session score</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>