force-app/main/default/objects/lep360learning__Path_Session_Stats__c/fields/lep360learning__Path_session_time_spent_seconds__c.field-meta.xml
<CustomField>
    <fullName>lep360learning__Path_session_time_spent_seconds__c</fullName>
    <label>360Learning Path time spent (seconds)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>