force-app/main/default/objects/lep360learning__Path_Session_Stats__c/fields/lep360learning__SF_Lead__c.field-meta.xml
<CustomField>
    <fullName>lep360learning__SF_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SF Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>360Learning Path Session Stats</relationshipLabel>
    <relationshipName>Path_Session_Stats</relationshipName>
    <type>Lookup</type>
</CustomField>