force-app/main/default/objects/lep360learning__Path_Session_Stats__c/fields/lep360learning__User_name__c.field-meta.xml
<CustomField>
    <fullName>lep360learning__User_name__c</fullName>
    <label>360Learning User name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>