force-app/main/default/objects/lep360learning__Path_Session_Stats__c/listViews/lep360learning__All.listView-meta.xml
<ListView>
    <fullName>lep360learning__All</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>